--- a/Proyecto Final/package.json
+++ b/Proyecto Final/package.json
@@ -1,3 +1,19 @@
 {
-    "type": "module"
+  "type": "module",
+  "name": "proyecto-final",
+  "version": "1.0.0",
+  "main": "FilesManager.js",
+  "scripts": {
+    "start": "nodemon src/index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
