--- a/Proyecto Final/package.json
+++ b/Proyecto Final/package.json
@@ -14,8 +14,10 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
+    "font-awesome": "^4.7.0",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.6.0"
   }
