--- a/Proyecto Final DB/package.json
+++ b/Proyecto Final DB/package.json
@@ -8,8 +8,7 @@
   "license": "ISC",
   "description": "",
   "scripts": {
-    "start": "nodemon src/index.js",
-    "test": "nodemon src/test/Controller1.js"
+    "start": "nodemon src/index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
