--- a/Proyecto Final DB/package.json
+++ b/Proyecto Final DB/package.json
@@ -12,8 +12,9 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "express-handlebars": "^6.0.7",
+    "express-handlebars": "^7.0.2",
     "mongoose": "^6.9.2",
+    "mongoose-paginate-v2": "^1.7.1",
     "socket.io": "^4.6.0"
   },
   "devDependencies": {
