--- a/Proyecto Final DB/package.json
+++ b/Proyecto Final DB/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.0.2",
     "express-session": "^1.17.3",
+    "https-proxy-agent": "^5.0.1",
     "mongoose": "^6.9.2",
     "mongoose-paginate-v2": "^1.7.1",
     "passport": "^0.6.0",
